fixed nav on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -385,7 +385,8 @@ a {
     .site-navigation {
       border-top: 2px solid #111;
       border-bottom: 2px solid #111;
-      padding: 5px;
+      padding: 9px;
+      display: flex;
       overflow-x: scroll;
       text-align: center;
 
